--- a/package.json
+++ b/package.json
@@ -1,17 +1,39 @@
 {
   "name": "khlav",
-  "version": "1.0.1",
-  "description": "",
-  "main": "index.js",
+  "version": "1.0.3",
+  "description": "Khlav is a robust and customizable economy and gambling system for your Node.js applications.",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Sophan-Developer/khlav.git",
+    "homepage": "https://github.com/Sophan-Developer/khlav/#README.md"
+  },
+  "keywords": [
+    "currency",
+    "level",
+    "up",
+    "system",
+    "inventory",
+    "money",
+    "discord",
+    "js",
+    "discordjs",
+    "currency-system",
+    "economy",
+    "eco",
+    "ultrax",
+    "mongoose",
+    "mongodb"
+  ],
+  "author": "Sophan-Developer",
+  "license": "MIT",
   "dependencies": {
+    "mongoose": "^8.5.1",
+    "node-fetch": "^2.6.1",
     "discord.js": "^14.15.3",
-    "dotenv": "^16.4.5",
-    "mongoose": "^8.5.1"
+    "dotenv": "^16.4.5"
   }
 }
